Feat: review init